# proiectPC

./: 6502.org_ Tutorials and Aids.html  CMakeLists.txt  TODO.txt  imgui.ini  ppu_out.ppm
nesTests/: palette_fill.nes  ppu_test
solutions/: 6502.cpp  bus.cpp  cpu.cpp  gui.cpp  input.cpp  mapper.cpp  memory.cpp  ppu.cpp  ppu_test.cpp
solutions/headers/: APU.h  bus.h  cpu.h  debugger.h  functionHandlers.h  gui.h  input.h  instructions.h  libraries.h  mapper.h  memory.h  ppu.h  table.h
